--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "next": "15.5.2",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
